blog/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  template:
    spec:
      containers:
      - name: blog
        image: lrotermund/blog:v1.6.1
