blog/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
  namespace: blog
spec:
  rules:
  - host: lukasrotermund.de
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 80
  tls:
    - hosts:
      - 'lukasrotermund.de'
